[package]
name = "log_vault"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.9"
dotenvy = "0.15.7"
flate2 = "1.1.9"
futures = "0.3.32"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
yup-oauth2 = "12.1.2"
